# api-python

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
src/Base/: ValidParameters.py
src/Models/V2/: Game.py
