[project]
name = "oddsjam-api"
version = "0.2.8"
authors = [
  { name="Brandon Cooper", email="cooper.brandon@outlook.com" },
  { name="Rohan Challa", email="rchalla769@gmail.com" },
]
description = "A lightweight OddsJam API wrapper"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/oddsjam/api-python"
"Bug Tracker" = "https://github.com/oddsjam/api-python/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"